# game-asset-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/game_asset_mcp/: __init__.py  catalog.py  config.py  glb_reader.py  ingest.py  polyhaven.py  render_preview.py  search.py  server.py  wizard.py
tests/: conftest.py  test_catalog.py  test_config.py  test_glb_reader.py  test_ingest.py  test_polyhaven.py  test_server_tools.py  test_wizard.py
tests/e2e/: conftest.py  test_ingest_e2e.py
